correct numbers for linear scaling on index css
Issue: iPhone 5/SE nav bar has contact link overflowing

--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -3,22 +3,25 @@ body {
 	background: url(../images/index.jpg) no-repeat center center fixed;
 }
 
-/*
+
 p{
-	font-size: calc(15px + (26 - 15) * ((100vw - 300px) / (1600 - 300)));
+	font-size: calc(70px + (80 - 70) * ((100vw - 300px) / (900 - 300)));
 }
 #indexText{
-	font-size: calc(15px + (26 - 15) * ((100vw - 300px) / (1600 - 300)));
-}*/
+	font-size: calc(11px + (150 - 11) * ((100vw - 300px) / (15000 - 300)));
+}
+
 
 /*RESPONSIVE*/
-@media (min-width: 816px) {
+/*
+@media (min-width: 1024px) {
+	
   p {
 		font-size: calc(15px + (80 - 15) * ((100vw - 300px) / (900 - 300)));
 	}
 	
 	#indexText {
-		font-size: calc(12px + (80 - 12) * ((100vw - 300px) / (15000 - 300)));
+		font-size: calc(12px + (200 - 12) * ((100vw - 300px) / (15000 - 300)));
 	}
 }
 
@@ -31,11 +34,12 @@ p{
 	#indexText {
 		font-size: calc(10px + (80 - 10) * ((100vw - 300px) / (9000 - 300)));
 	}
-}
+}*/
 
-
+/*
 @media (max-width: 325px){
 	p {
 		font-size: calc(15px + (80 - 15) * ((150vw - 300px) / (550 - 300)));
 	}
 }
+*/
